--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -39,8 +39,8 @@
 
   <section class="leader">
     <div class="leader-content-wrap">
-      <img class="interactive-image-mobile" src="img/mobile/image-interactive.jpg">
-      <img class="interactive-image-desktop" src="img/desktop/image-interactive.jpg">
+      <img class="interactive-image-mobile" src="img/mobile/image-interactive.jpg" alt="Interactive VR">
+      <img class="interactive-image-desktop" src="img/desktop/image-interactive.jpg" alt="Interactive VR">
 
       <div class="leader-text">
         <h2>The leader in<br>interactive VR</h2>
@@ -62,30 +62,30 @@
     <a class="see-all" href="#">See all</a>
 
     <div class="thumbnail-container">
-      <div class="thumbnail deep-earth">
+      <a href="#" class="thumbnail deep-earth">
         <div class="title">Deep<br>Earth</div>
-      </div>
-      <div class="thumbnail night-arcade">
+      </a>
+      <a href="#" class="thumbnail night-arcade">
         <div class="title">Night<br>arcade</div>
-      </div>
-      <div class="thumbnail soccer-team">
+      </a>
+      <a href="#" class="thumbnail soccer-team">
         <div class="title">Soccer<br>Team VR</div>
-      </div>
-      <div class="thumbnail grid">
+      </a>
+      <a href="#" class="thumbnail grid">
         <div class="title">The<br>grid</div>
-      </div>
-      <div class="thumbnail from-above">
+      </a>
+      <a href="#" class="thumbnail from-above">
         <div class="title">From up<br>above VR</div>
-      </div>
-      <div class="thumbnail pocket-borealis">
+      </a>
+      <a href="#" class="thumbnail pocket-borealis">
         <div class="title">Pocket<br>borealis</div>
-      </div>
-      <div class="thumbnail curiosity">
+      </a>
+      <a href="#" class="thumbnail curiosity">
         <div class="title">The<br>curiosity</div>
-      </div>
-      <div class="thumbnail fisheye">
+      </a>
+      <a href="#" class="thumbnail fisheye">
         <div class="title">Make it<br>fisheye</div>
-      </div>
+      </a>
     </div>
   </section>
 
@@ -125,7 +125,6 @@
 
   </footer>
 
-  <script src="app.js"></script>
 </body>
 
 </html>
