Desktop active states

--- a/Frontend Mentor/Loopstudios Landing Page/index.html
+++ b/Frontend Mentor/Loopstudios Landing Page/index.html
@@ -22,11 +22,11 @@
 
       <nav id="header-navigation">
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Support</a></li>
+          <li><a class="hover-effect" href="#">About</a></li>
+          <li><a class="hover-effect" href="#">Careers</a></li>
+          <li><a class="hover-effect" href="#">Events</a></li>
+          <li><a class="hover-effect" href="#">Products</a></li>
+          <li><a class="hover-effect" href="#">Support</a></li>
         </ul>
       </nav>
     
@@ -94,26 +94,26 @@
     <div class="logo"><img src="img/logo.svg" alt="Loopstudios Logo"></div>
     <nav>
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Support</a></li>
+        <li><a class="hover-effect" href="#">About</a></li>
+        <li><a class="hover-effect" href="#">Careers</a></li>
+        <li><a class="hover-effect" href="#">Events</a></li>
+        <li><a class="hover-effect" href="#">Products</a></li>
+        <li><a class="hover-effect" href="#">Support</a></li>
       </ul>
     </nav>  
 
     <div class="social-icons">
-      <a href="#">
-        <img class="social-icon facebook" src="img/icon-facebook.svg">
+      <a class="hover-effect" href="#">
+        <img class="social-icon facebook" src="img/icon-facebook.svg" alt="Facebook Icon">
       </a>
-      <a href="#">
-        <img class="social-icon twitter" src="img/icon-twitter.svg">
+      <a class="hover-effect" href="#">
+        <img class="social-icon twitter" src="img/icon-twitter.svg" alt="Twitter Icon">
       </a>
-      <a href="#">
-        <img class="social-icon pinterest" src="img/icon-pinterest.svg">
+      <a class="hover-effect" href="#">
+        <img class="social-icon pinterest" src="img/icon-pinterest.svg" alt="Pinterest Icon">
       </a>
-      <a href="#">
-        <img class="social-icon instagra" src="img/icon-instagram.svg">
+      <a class="hover-effect" href="#">
+        <img class="social-icon instagram" src="img/icon-instagram.svg" alt="Instagram Icon">
       </a>
     </div>
     <div class="copyright">© 2021 Loopstudios. All rights reserved.</div>
