--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
@@ -16,36 +17,39 @@
 </head>
 <body>
 
-  Social Media Dashboard
-  Total Followers: 23,004
+  <h1>Social Media Dashboard</h1>
+  <div class="total-followers-count">Total Followers: 23,004</div>
 
   Dark Mode
 
   
 
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+  <div class="social-username facebook-handle">@nathanf</div>
+  <div class="number-followers">1987</div>
+  <div class="followers-label">Followers</div>
+  <div class="follower-change positive-change">12 Today</div>
 
 
+  <div class="social-username twitter-handle">@nathanf</div>
+  <div class="number-followers">1044</div>
+  <div class="followers-label">Followers</div>
+  <div class="follower-change positive-change"></div>99 Today
 
-  Overview - Today
+
+  <div class="social-username instagram-handle">@realnathanf</div>
+  <div class="number-followers">11k</div>
+  <div class="followers-label">Followers</div>
+  <div class="follower-change positive-change">1099 Today</div>
+
+
+  <div class="social-username youtube-handle">Nathan F.</div>
+  <div class="number-followers">8239</div>
+  <div class="followers-label">Subscribers</div>
+  <div class="follower-change negative-change">144 Today</div>
+
+
+
+  <h2>Overview - Today</h2>
 
   Page Views
   87
@@ -83,5 +87,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
