General overview section skeleton

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -7,81 +7,81 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Social Media Dashboard</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div id="content-wrap">
+    <h1>Social Media Dashboard</h1>
+    <div class="total-followers-count">Total Followers: 23,004</div>
+    <div class="dark-mode">
+      Dark Mode
+      <input type="checkbox" class="color-mode-toggle">
+    </div>
 
-  <h1>Social Media Dashboard</h1>
-  <div class="total-followers-count">Total Followers: 23,004</div>
+    <div class="general-overview">
+      <!-- Facebook -->
+      <div class="social-username facebook-handle">@nathanf</div>
+      <div class="number-followers">1987</div>
+      <div class="followers-label">Followers</div>
+      <div class="follower-change positive-change">12 Today</div>
 
-  Dark Mode
+      <!-- Twitter -->
+      <div class="social-username twitter-handle">@nathanf</div>
+      <div class="number-followers">1044</div>
+      <div class="followers-label">Followers</div>
+      <div class="follower-change positive-change"></div>99 Today
 
-  
+      <!-- Instagram -->
+      <div class="social-username instagram-handle">@realnathanf</div>
+      <div class="number-followers">11k</div>
+      <div class="followers-label">Followers</div>
+      <div class="follower-change positive-change">1099 Today</div>
 
-  <div class="social-username facebook-handle">@nathanf</div>
-  <div class="number-followers">1987</div>
-  <div class="followers-label">Followers</div>
-  <div class="follower-change positive-change">12 Today</div>
-
-
-  <div class="social-username twitter-handle">@nathanf</div>
-  <div class="number-followers">1044</div>
-  <div class="followers-label">Followers</div>
-  <div class="follower-change positive-change"></div>99 Today
-
-
-  <div class="social-username instagram-handle">@realnathanf</div>
-  <div class="number-followers">11k</div>
-  <div class="followers-label">Followers</div>
-  <div class="follower-change positive-change">1099 Today</div>
-
-
-  <div class="social-username youtube-handle">Nathan F.</div>
-  <div class="number-followers">8239</div>
-  <div class="followers-label">Subscribers</div>
-  <div class="follower-change negative-change">144 Today</div>
+      <!-- YouTube -->
+      <div class="social-username youtube-handle">Nathan F.</div>
+      <div class="number-followers">8239</div>
+      <div class="followers-label">Subscribers</div>
+      <div class="follower-change negative-change">144 Today</div>
+    </div>
 
 
+    <div class="overview-today">
+      <h2>Overview - Today</h2>
 
-  <h2>Overview - Today</h2>
+      Page Views
+      87
+      3%
 
-  Page Views
-  87
-  3%
+      Likes
+      52
+      2%
 
-  Likes
-  52
-  2%
+      Likes
+      5462
+      2257%
 
-  Likes
-  5462
-  2257%
+      Profile Views
+      52k
+      1375%
 
-  Profile Views
-  52k
-  1375%
+      Retweets
+      117
+      303%
 
-  Retweets
-  117
-  303%
+      Likes
+      507
+      553%
 
-  Likes
-  507
-  553%
+      Likes
+      107
+      19%
 
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
+      Total Views
+      1407
+      12%
+    </div>
+  </div>  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
