More general skeleton

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -15,71 +15,97 @@
     <h1>Social Media Dashboard</h1>
     <div class="total-followers-count">Total Followers: 23,004</div>
     <div class="dark-mode">
-      Dark Mode
+      <div class="toggle-label">Dark Mode</div>
       <input type="checkbox" class="color-mode-toggle">
     </div>
 
     <div class="general-overview">
-      <!-- Facebook -->
-      <div class="social-username facebook-handle">@nathanf</div>
-      <div class="number-followers">1987</div>
-      <div class="followers-label">Followers</div>
-      <div class="follower-change positive-change">12 Today</div>
 
-      <!-- Twitter -->
-      <div class="social-username twitter-handle">@nathanf</div>
-      <div class="number-followers">1044</div>
-      <div class="followers-label">Followers</div>
-      <div class="follower-change positive-change"></div>99 Today
+      <div class="card big-card facebook">
+        <!-- Facebook -->
+        <div class="social-username facebook-handle">@nathanf</div>
+        <div class="number-followers">1987</div>
+        <div class="stat-label">Followers</div>
+        <div class="stat-change positive-change">12 Today</div>
+      </div>
 
-      <!-- Instagram -->
-      <div class="social-username instagram-handle">@realnathanf</div>
-      <div class="number-followers">11k</div>
-      <div class="followers-label">Followers</div>
-      <div class="follower-change positive-change">1099 Today</div>
+      <div class="card big-card twitter">
+        <!-- Twitter -->
+        <div class="social-username twitter-handle">@nathanf</div>
+        <div class="number-followers">1044</div>
+        <div class="stat-label">Followers</div>
+        <div class="stat-change positive-change">99 Today</div>
+      </div>
 
-      <!-- YouTube -->
-      <div class="social-username youtube-handle">Nathan F.</div>
-      <div class="number-followers">8239</div>
-      <div class="followers-label">Subscribers</div>
-      <div class="follower-change negative-change">144 Today</div>
+      <div class="card big-card twitter">
+        <!-- Instagram -->
+        <div class="social-username instagram-handle">@realnathanf</div>
+        <div class="number-followers">11k</div>
+        <div class="stat-label">Followers</div>
+        <div class="stat-change positive-change">1099 Today</div>
+      </div>
+
+      <div class="card big-card twitter">
+        <!-- YouTube -->
+        <div class="social-username youtube-handle">Nathan F.</div>
+        <div class="number-followers">8239</div>
+        <div class="stat-label">Subscribers</div>
+        <div class="stat-change negative-change">144 Today</div>
+      </div>
     </div>
 
 
     <div class="overview-today">
       <h2>Overview - Today</h2>
 
-      Page Views
-      87
-      3%
+      <div class="card small-card">
+        <div class="stat-label">Page Views</div>
+        87
+        <div class="stat-change positive-change">3%</div>
+      </div>
 
-      Likes
-      52
-      2%
+      <div class="card small-card">
+        <div class="stat-label">Likes</div>
+        52
+        <div class="stat-change negative-change">2%</div>
+      </div>
 
-      Likes
-      5462
-      2257%
+      <div class="card small-card"> 
+        <div class="stat-label">Likes</div>
+        5462
+        <div class="stat-change positive-change">2257%</div>
+      </div>
 
-      Profile Views
-      52k
-      1375%
+      <div class="card small-card">
+        <div class="stat-label">Profile Views</div>
+        52k
+        <div class="stat-change positive-change">1375%</div>
+      </div>
 
-      Retweets
-      117
-      303%
+      <div class="card small-card">
+        <div class="stat-label">Retweets</div>
+        117
+        <div class="stat-change positive-change">303%</div>
+      </div>
 
-      Likes
-      507
-      553%
+      <div class="card small-card">
+        <div class="stat-label">Likes</div>
+        507
+        <div class="stat-change positive-change">553%</div>
+      </div>
 
-      Likes
-      107
-      19%
+      <div class="card small-card">
+        <div class="stat-label">Likes</div>
+        107
+        <div class="stat-change negative-change">19%</div>
+      </div>
 
-      Total Views
-      1407
-      12%
+      <div class="card small-card">
+        <div class="stat-label">Total Views</div>
+        1407
+        <div class="stat-change negative-change">12%</div>
+      </div>
+
     </div>
   </div>  
   
