Mobile general overview styling

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -29,7 +29,10 @@
 
         <!-- Facebook -->
         <div class="card big-card facebook">
-          <div class="social-username facebook-handle">@nathanf</div>
+          <div class="icon-username-container">
+            <img class="social-icon" src="img/icon-facebook.svg" alt="Facebook Icon"> 
+            <div class="social-username facebook-handle">@nathanf</div>
+          </div>  
           <div class="stat facebook-followers">1987</div>
           <div class="stat-label">Followers</div>
           <div class="stat-change positive-change">12 Today</div>
@@ -37,7 +40,10 @@
 
         <!-- Twitter -->
         <div class="card big-card twitter">
-          <div class="social-username twitter-handle">@nathanf</div>
+          <div class="icon-username-container">
+            <img class="social-icon" src="img/icon-twitter.svg" alt="Twitter Icon">
+            <div class="social-username twitter-handle">@nathanf</div>
+          </div>
           <div class="stat twitter-followers">1044</div>
           <div class="stat-label">Followers</div>
           <div class="stat-change positive-change">99 Today</div>
@@ -45,7 +51,10 @@
 
         <!-- Instagram -->
         <div class="card big-card instagram">
-          <div class="social-username instagram-handle">@realnathanf</div>
+          <div class="icon-username-container">
+            <img class="social-icon" src="img/icon-instagram.svg" alt="Instagram Icon">
+            <div class="social-username instagram-handle">@realnathanf</div>
+          </div>
           <div class="stat instagram-followers">11k</div>
           <div class="stat-label">Followers</div>
           <div class="stat-change positive-change">1099 Today</div>
@@ -53,7 +62,10 @@
 
         <!-- YouTube -->
         <div class="card big-card youtube">
-          <div class="social-username youtube-handle">Nathan F.</div>
+          <div class="icon-username-container">
+            <img class="social-icon" src="img/icon-youtube.svg" alt="YouTube Icon">
+            <div class="social-username youtube-handle">Nathan F.</div>
+          </div>
           <div class="stat youtube-subscribers">8239</div>
           <div class="stat-label">Subscribers</div>
           <div class="stat-change negative-change">144 Today</div>
