today overview card styling

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -75,61 +75,72 @@
 
       <div class="overview-today">
         <h2>Overview - Today</h2>
+        
+        <div class="card-container">
 
-        <!-- Facebook -->
+          <!-- Facebook -->
 
-        <div class="card small-card facebook">
-          <div class="stat-label">Page Views</div>
-          <div class="stat facebook-pageviews">87</div>
-          <div class="stat-change facebook-pageviews-change positive-change">3%</div>
-        </div>
+          <div class="card small-card facebook">
+            <div class="stat-label">Page Views</div>
+            <img class="social-icon" src="img/icon-facebook.svg" alt="Facebook Icon">
+            <div class="stat facebook-pageviews">87</div>
+            <div class="stat-change facebook-pageviews-change positive-change">3%</div>
+          </div>
 
-        <div class="card small-card facebook">
-          <div class="stat-label">Likes</div>
-          <div ckass="stat facebook-likes">52</div>
-          <div class="stat-change facebook-likes-change negative-change">2%</div>
-        </div>
+          <div class="card small-card facebook">
+            <div class="stat-label">Likes</div>
+            <img class="social-icon" src="img/icon-facebook.svg" alt="Facebook Icon">
+            <div class="stat facebook-likes">52</div>
+            <div class="stat-change facebook-likes-change negative-change">2%</div>
+          </div>
 
-        <!-- Instagram -->
+          <!-- Instagram -->
 
-        <div class="card small-card instagram"> 
-          <div class="stat-label">Likes</div>
-          <div class="stat instagram-likes">5462</div>
-          <div class="stat-change instagram-likes-change positive-change">2257%</div>
-        </div>
+          <div class="card small-card instagram"> 
+            <div class="stat-label">Likes</div>
+            <img class="social-icon" src="img/icon-instagram.svg" alt="Instagram Icon">
+            <div class="stat instagram-likes">5462</div>
+            <div class="stat-change instagram-likes-change positive-change">2257%</div>
+          </div>
 
-        <div class="card small-card instagram">
-          <div class="stat-label">Profile Views</div>
-          <div class="stat instagram-views">52k</div>
-          <div class="stat-change instagram-views-change positive-change">1375%</div>
-        </div>
+          <div class="card small-card instagram">
+            <div class="stat-label">Profile Views</div>
+            <img class="social-icon" src="img/icon-instagram.svg" alt="Instagram Icon">
+            <div class="stat instagram-views">52k</div>
+            <div class="stat-change instagram-views-change positive-change">1375%</div>
+          </div>
 
-        <!-- Twitter -->
+          <!-- Twitter -->
 
-        <div class="card small-card twitter">
-          <div class="stat-label">Retweets</div>
-          <div class="stat retweets">117</div>
-          <div class="stat-change retweets-change positive-change">303%</div>
-        </div>
+          <div class="card small-card twitter">
+            <div class="stat-label">Retweets</div>
+            <img class="social-icon" src="img/icon-twitter.svg" alt="Twitter Icon">
+            <div class="stat retweets">117</div>
+            <div class="stat-change retweets-change positive-change">303%</div>
+          </div>
 
-        <div class="card small-card twitter">
-          <div class="stat-label">Likes</div>
-          <div class="stat twitter-likes">507</div>
-          <div class="stat-change twitter-likes-change positive-change">553%</div>
-        </div>
+          <div class="card small-card twitter">
+            <div class="stat-label">Likes</div>
+            <img class="social-icon" src="img/icon-twitter.svg" alt="Twitter Icon">
+            <div class="stat twitter-likes">507</div>
+            <div class="stat-change twitter-likes-change positive-change">553%</div>
+          </div>
 
-        <!-- YouTube -->
+          <!-- YouTube -->
 
-        <div class="card small-card youtube">
-          <div class="stat-label">Likes</div>
-          <div class="stat youtube-likes">107</div>
-          <div class="stat-change youtube-likes-change negative-change">19%</div>
-        </div>
+          <div class="card small-card youtube">
+            <div class="stat-label">Likes</div>
+            <img class="social-icon" src="img/icon-youtube.svg" alt="YouTube Icon">
+            <div class="stat youtube-likes">107</div>
+            <div class="stat-change youtube-likes-change negative-change">19%</div>
+          </div>
 
-        <div class="card small-card youtube">
-          <div class="stat-label">Total Views</div>
-          <div class="stat youtube-views">1407</div>
-          <div class="stat-change youtube-views-change negative-change">12%</div>
+          <div class="card small-card youtube">
+            <div class="stat-label">Total Views</div>
+            <img class="social-icon" src="img/icon-youtube.svg" alt="YouTube Icon">
+            <div class="stat youtube-views">1407</div>
+            <div class="stat-change youtube-views-change negative-change">12%</div>
+          </div>
         </div>
 
       </div>
