Desktop version position and styling

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -14,8 +14,10 @@
   <div class="page-wrap">
     <div id="content-wrap">
       <header>
-      <h1>Social Media Dashboard</h1>
-        <div class="total-followers-count">Total Followers: 23,004</div>
+        <div class="headings">
+          <h1>Social Media Dashboard</h1>
+          <div class="total-followers-count">Total Followers: 23,004</div>
+        </div>
 
         <hr>
 
@@ -24,6 +26,8 @@
           <input type="checkbox" class="color-mode-toggle">
         </div>
       </header>
+
+
 
       <div class="general-overview">
 
