Desktop styling tweaks

--- a/Frontend Mentor/Social Media Dashboard/index.html
+++ b/Frontend Mentor/Social Media Dashboard/index.html
@@ -23,7 +23,7 @@
 
         <div class="dark-mode-option">
           <div class="toggle-label">Dark Mode</div>
-          <input type="checkbox" class="color-mode-toggle">
+          <input aria-label="Dark Mode Toggle" type="checkbox" class="color-mode-toggle">
         </div>
       </header>
 
