--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -11,29 +11,43 @@
 </head>
 
 <body>
-  <nav class="main-menu">
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <div class="hero">
 
-  We are creatives
+    <header>
+      <img src="img/logo.svg" alt="Sunnyside Logo">
 
-  Transform your brand
+      <input type="checkbox" aria-label="Display menu toggle">
+      <nav class="main-menu">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+  
+    <img src="img/icon-arrow-down.svg" alt="Arrow down icon">
+
+    <h1>We are creatives</h1>
+
+  </div>  
+
+
+  <div class="brand-introduction">
+  <h2>Transform your brand</h2>
 
   We are a full-service creative agency specializing in helping brands grow fast. 
   Engage your clients through compelling visuals that do most of the marketing for you.
 
-  Learn more
+  <a href="#">Learn more</a>
 
-  Stand out to the right audience
+  <h2>Stand out to the right audience</h2>
 
   Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
 
-  Learn more
+  <a href="#">Learn more</a>
 
   Graphic design
   Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
@@ -41,24 +55,39 @@
   Photography
   Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
 
-  Client testimonials
+  <section class="client-testimonials">
+    <h3>Client testimonials</h3>
 
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
+    <div class="testimonial">
+      We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+      Emily R.
+      Marketing Director
+    </div>
 
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
+    <div class="testimonial">
+      Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+      Thomas S.
+      Chief Operating Officer
+    </div>
 
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+    <div class="testimonial">
+      Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+      Jennie F.
+      Business Owner
+    </div>
+  </section>
+  <footer>
+    <img src="img/logo.svg" alt="Sunnyside Logo">
 
-  About
-  Services
-  Projects
-  Contact
+    <nav class="secondary-nav">
+      <ul>
+        <li><a href="">About</a></li>
+        <li><a href="">Services</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </footer>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
