More complete HTML

--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -36,46 +36,64 @@
 
 
   <div class="brand-introduction">
-  <h2>Transform your brand</h2>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+    <img class="grid-image transform" src="img/mobile/image-transform.jpg" alt="Transform your brand">
 
-  <a href="#">Learn more</a>
+    <div class="blurb-card transform">
+      <h2>Transform your brand</h2>    
+      <div class="blurb">
+        We are a full-service creative agency specializing in helping brands grow fast.
+        Engage your clients through compelling visuals that do most of the marketing for you.
+      </div>
+      <a href="#">Learn more</a>
+    </div>
 
-  <h2>Stand out to the right audience</h2>
+    <img class="grid-image stand-out" src="img/mobile/image-stand-out.jpg" alt="Stand out">
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+    <div class="blurb-card stand-out">
+      <h2>Stand out to the right audience</h2>
+      <div class="brand-blurb">
+        Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters,
+        we’ll build and extend your brand in digital places.
+      </div>
+      <a href="#">Learn more</a>
+    </div>
+  </div>
 
-  <a href="#">Learn more</a>
+  <div class="services">
+    <div class="service-card graphic-design">
+    <div>Graphic design</div>
+    <div>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
+    </div>  
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+    <div class="service-card photography">
+    <div>Photography</div>
+    <div>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
+    </div>
+  </div>
 
   <section class="client-testimonials">
     <h3>Client testimonials</h3>
 
     <div class="testimonial">
-      We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-      Emily R.
-      Marketing Director
+      <div class="testimonial-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</div>
+      <div class="client-name">Emily R.</div>
+      <div class="client-occupation">Marketing Director</div>
     </div>
 
     <div class="testimonial">
-      Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-      Thomas S.
-      Chief Operating Officer
+      <div class="testimonial-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</div>
+      <div class="client-name">Thomas S.</div>
+      <div class="client-occupation">Chief Operating Officer</div>
     </div>
 
     <div class="testimonial">
-      Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-      Jennie F.
-      Business Owner
+      <div class="testimonial-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</div>
+      <div class="client-name">Jennie F.</div>
+      <div class="client-occupation">Business Owner</div>
     </div>
   </section>
+
   <footer>
     <img src="img/logo.svg" alt="Sunnyside Logo">
 
