--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -62,13 +62,13 @@
 
   <div class="services">
     <div class="service-card graphic-design">
-    <div>Graphic design</div>
-    <div>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
+      <div>Graphic design</div>
+      <div>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
     </div>  
 
     <div class="service-card photography">
-    <div>Photography</div>
-    <div>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
+      <div>Photography</div>
+      <div>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
     </div>
   </div>
 
@@ -76,23 +76,33 @@
     <h3>Client testimonials</h3>
 
     <div class="testimonial">
+      <img class="client-avatar" src="img/image-emily.jpg" alt="Client avatar">
       <div class="testimonial-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</div>
       <div class="client-name">Emily R.</div>
       <div class="client-occupation">Marketing Director</div>
     </div>
 
     <div class="testimonial">
+      <img class="client-avatar" src="img/image-thomas.jpg" alt="Client avatar">
       <div class="testimonial-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</div>
       <div class="client-name">Thomas S.</div>
       <div class="client-occupation">Chief Operating Officer</div>
     </div>
 
     <div class="testimonial">
+      <img class="client-avatar" src="img/image-jennie.jpg" alt="Client avatar">
       <div class="testimonial-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</div>
       <div class="client-name">Jennie F.</div>
       <div class="client-occupation">Business Owner</div>
     </div>
   </section>
+
+  <div class="footer-image-grid">
+    <img src="img/mobile/image-gallery-milkbottles.jpg" alt="Footer image">
+    <img src="img/mobile/image-gallery-orange.jpg" alt="Footer image">
+    <img src="img/mobile/image-gallery-cone.jpg" alt="Footer image">
+    <img src="img/mobile/image-gallery-sugar-cubes.jpg" alt="Footer image">
+  </div>
 
   <footer>
     <img src="img/logo.svg" alt="Sunnyside Logo">
@@ -105,11 +115,13 @@
         <li><a href="">Contact</a></li>
       </ul>
     </nav>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.github.com/alexvalpeter">Alexandria Peterson</a>.
+    </div>
   </footer>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.github.com/alexvalpeter">Alexandria Peterson</a>.
-  </div>
+
 </body>
 </html>
