--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -26,7 +26,6 @@
         </ul>
       </nav>
     </header>
-
   
     <img src="img/icon-arrow-down.svg" alt="Arrow down icon">
 
@@ -45,7 +44,7 @@
         We are a full-service creative agency specializing in helping brands grow fast.
         Engage your clients through compelling visuals that do most of the marketing for you.
       </div>
-      <a href="#">Learn more</a>
+      <a class="learn-more" href="#">Learn more</a>
     </div>
 
     <img class="grid-image stand-out" src="img/mobile/image-stand-out.jpg" alt="Stand out">
@@ -56,7 +55,7 @@
         Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters,
         we’ll build and extend your brand in digital places.
       </div>
-      <a href="#">Learn more</a>
+      <a class="learn-more" href="#">Learn more</a>
     </div>
   </div>
 
