Mobile main nav

--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -16,13 +16,14 @@
     <header>
       <img src="img/logo.svg" alt="Sunnyside Logo">
 
-      <input type="checkbox" aria-label="Display menu toggle">
+      <input class="hamburger-icon" type="checkbox" aria-label="Display menu toggle">
+
       <nav class="main-menu">
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="contact"><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +35,7 @@
   </div>  
 
 
-  <div class="brand-introduction">
+  <div class="brand-showcase">
 
     <img class="grid-image transform" src="img/mobile/image-transform.jpg" alt="Transform your brand">
 
