Hero section styling

--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -14,7 +14,7 @@
   <div class="hero">
 
     <header>
-      <img src="img/logo.svg" alt="Sunnyside Logo">
+      <img class="logo" src="img/logo.svg" alt="Sunnyside Logo">
 
       <input class="hamburger-icon" type="checkbox" aria-label="Display menu toggle">
 
@@ -30,7 +30,7 @@
 
     <h1>We are creatives</h1>
 
-    <img src="img/icon-arrow-down.svg" alt="Arrow down icon">
+    <img class="arrow-icon" src="img/icon-arrow-down.svg" alt="Arrow down icon">
 
   </div>  
 
