Brand blurb section styling

--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -52,7 +52,7 @@
 
     <div class="blurb-card stand-out">
       <h2>Stand out to the right audience</h2>
-      <div class="brand-blurb">
+      <div class="blurb">
         Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters,
         we’ll build and extend your brand in digital places.
       </div>
